# ContextChatBot

./: .gitignore  CustomContextChatbot.ipynb  LICENSE  README.md  pyproject.toml
data/: 2023_fashion_trends.csv
src/contextchatbot/: __init__.py  chatbot.py  cli.py
