[project]
name = "contextchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai==0.28.1",
    "pandas>=2.3.3",
    "tiktoken>=0.12.0",
]

[project.scripts]
contextchatbot = "contextchatbot:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
